--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Frontend Mentor | Space tourism website</title>
 </head>
 
-<body id="body">
+<body id="body" >
   <header class="header">
     <!-- the img for the mobile breakpoint -->
     <img class="header_imgMobile" src="assets/shared/logo.svg" alt="icone">
@@ -21,32 +21,35 @@
 
     <div class="header_barreGenerale">
 
-      <img src="assets/shared/logo.svg" alt="icone">
+      <a href="index.html"> <img src="assets/shared/logo.svg" alt="icone"></a>
 
       <div class="bar"></div>
 
-      <div class="header_menu">
+      <nav class="header_menu">
         <ul>
           <li id="HOME"><span>00</span>Home</li>
           <li id="DESTINATION"><span>01</span>Destination</li>
           <li id="CREW"><span>02</span>Crew</li>
           <li id="TECHNOLOGY"><span>03</span>Technology</li>
         </ul>
+      </nav>
 
-      </div>
-      </div>
+    </div>
   </header>
 
-  <section>
-    <div>So, you want to travel to
-    Space
-    Let’s face it; if you want to go to space, you might as well genuinely go to
-    outer space and not hover kind of on the edge of it. Well sit back, and relax
-    because we’ll give you a truly out of this world experience!
-</div>
- 
-<button type="submit">Explore</button>
-    
+  <section class="section_home" >
+    <div >
+      <h3 class="so_typo">So, you want to travel to</h3>
+      <h1 class="space_typo">SPACE</h1>
+
+      <p class="Body_Text_typo">Let’s face it; if you want to go to space, you might as well genuinely go to
+        outer space and not hover kind of on the edge of it. Well sit back, and relax
+        because we’ll give you a truly out of this world experience!
+      </p>
+    </div>
+
+    <button type="submit" class="Home_btn Commander_typo">EXPLORE</button>
+
 
   </section>
 
