fin total du premier projet

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body id="body" >
   <header class="header">
-    <!-- the img for the mobile breakpoint -->
+    <!-- the logo for the mobile breakpoint -->
     <img class="header_imgMobile" src="assets/shared/logo.svg" alt="icone">
 
     <!-- Hamburger menu -->
     <img class="header_hamburger" src="assets/shared/icon-hamburger.svg" alt="Hamburger_menu" id="hamburger" >
 
     <div class="header_barreGenerale" id="barreGenerale">
-
+<!-- the logo for the pc and tablet breakpoint -->
       <a href="index.html"> <img src="assets/shared/logo.svg" alt="icone"></a>
 
       <div class="bar"></div>
@@ -56,7 +56,10 @@
       </p>
     </div>
 
-    <button type="submit" class="Home_btn Commander_typo">EXPLORE</button>
+    <div>
+
+      <button type="submit" class="Home_btn Commander_typo">EXPLORE</button>
+    </div>
 
 
   </section>
@@ -91,7 +94,7 @@
       <li id="satelite4">Titan</li>
     </ul>
 
-    <h1 id="h1">Moon</h1>
+    <h1 id="h1" class="h1">Moon</h1>
 
 
 
@@ -137,6 +140,8 @@
     <p class="titre_crew   titre_crew_typo"><span>02</span><span>Meet your crew</span></p>
 
 
+    <!-- aside pour centre balise dans les mobiles -->
+    <aside>  
     <h2 class="h2_crew  h2_crew_typo" id="h2_crew">Commander</h2>
 
     <h1 class="h1_crew h1_crew_typo" id="h1_crew">Douglas Hurley</h1>
@@ -153,6 +158,7 @@
       <input type="radio" name="radio" id="radio3">
       <input type="radio" name="radio" id="radio4">
     </div>
+  </aside>
   </div>
 
 
@@ -161,7 +167,6 @@
     <img src="assets/crew/image-removebg-preview(289).png" alt="image of douglas hurley" id="img_crew">
   </div>
 
-
 </section>
 
 
@@ -169,8 +174,11 @@
 <section class="techno_section" id="techno_sroll">
 
   <div class="left_techno">
+    
     <h3><span>03</span> <span> Space launch 101</span></h3>
 
+    <!-- aside pour centre balise dans les tabletes -->
+    <aside>
     <div class="btn_techno">
       <button type="button" name="button1" id="button1_techno">1</button>
       <button type="button" name="button2" id="button2_techno">2</button>
@@ -186,6 +194,7 @@
       space, usually to Earth orbit or beyond. Our WEB-X carrier rocket is the most powerful in operation. Standing
       150 metres tall, it's quite an awe-inspiring sight on the launch pad!
     </p>
+    </aside>
   </div>
 
 
